--- a/index.html
+++ b/index.html
@@ -29,6 +29,42 @@
       <img src="./images/icon-arrow-down.svg">
     </div>
   </header>
+
+  <main class="home">
+    <section class="brand">
+      <div class="brand-info">
+        <h2>Transform Your Brand</h2>
+        <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <a href="/">Learn More</a>
+      </div>
+      <div class="brand-bg">
+
+      </div>
+    </section>
+
+    <section class="stand">
+      <div class="stand-bg">
+
+      </div>
+      <div class="stand-info">
+        <h2>Stand out to the right audience</h2>
+        <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+        <a href="/">Learn More</a>
+      </div>
+    </section>
+
+    <section class="graphic-photo">
+      <div class="graphic-info">
+        <h3>Graphic Design</h3>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      </div>
+      <div class="photo-info">
+        <h3>Photography</h3>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </div>
+    </section>
+
+  </main>
 </body>
 
 </html>
