--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header class="header-bg">
+  <!-- <header class="header-bg">
     <nav class="header">
       <a href="/"><img src="./images/logo.svg" alt=""></a>
       <ul class="header-menu">
@@ -63,8 +63,48 @@
         <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </div>
     </section>
+  </main> -->
 
-  </main>
+  <section class="clients">
+
+    <h1>Client Testimonials</h1>
+
+    <div class="clients-test">
+      <div class="clients-info">
+        <img src="./images/image-emily.jpg" alt="">
+        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <div class="add-info">
+          <span class="name">Emily R.</span>
+          <span class="job">Marketing Director</span>
+        </div>
+      </div>
+
+      <div class="clients-info">
+        <img src="./images/image-thomas.jpg" alt="">
+        <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <div class="add-info">
+          <span class="name">Thomas S.</span>
+          <span class="job">Chief Operating Officer</span>
+        </div>
+      </div>
+
+      <div class="clients-info">
+        <img src="./images/image-jennie.jpg" alt="">
+        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <div class="add-info">
+          <span class="name">Jennie F.</span>
+          <span class="job">Business Owner</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="pictures">
+    <div class="milk"></div>
+    <div class="orange"></div>
+    <div class="milk"></div>
+    <div class="sugar"></div>
+  </section>
 </body>
 
 </html>
