--- a/index.html
+++ b/index.html
@@ -101,10 +101,22 @@
 
   <section class="pictures">
     <div class="milk"></div>
-    <div class="orange"></div>
-    <div class="milk"></div>
+    <div class="oranges"></div>
+    <div class="cone"></div>
     <div class="sugar"></div>
   </section>
+
+  <footer class="footer">
+    <a href="./"><img src="./images/logo2.svg" alt=""></a>
+    <nav>
+      <ul class="footer-menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </nav>
+
+  </footer>
 </body>
 
 </html>
