--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!-- <header class="header-bg">
+  <header class="header-bg">
     <nav class="header">
       <a href="/"><img src="./images/logo.svg" alt=""></a>
       <ul class="header-menu">
@@ -63,7 +63,7 @@
         <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </div>
     </section>
-  </main> -->
+  </main>
 
   <section class="clients">
 
@@ -114,9 +114,34 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
+
+      <ul class="footer-redes" data-icon="redes">
+        <li>
+          <a href="#facebook">
+            <img src="./images/icon-facebook.svg" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="#instagram">
+            <img src="./images/icon-instagram.svg" alt="">
+
+          </a>
+        </li>
+        <li>
+          <a href="#twitter">
+            <img src="./images/icon-twitter.svg" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="#pinterest">
+            <img src="./images/icon-pinterest.svg" alt="">
+          </a>
+        </li>
+      </ul>
     </nav>
 
   </footer>
+  <script src="./script.js"></script>
 </body>
 
 </html>
