mobile header e js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <header class="header-bg">
     <nav class="header">
       <a href="/"><img src="./images/logo.svg" alt=""></a>
-      <ul class="header-menu">
+      <button data-menu="button" class="menu-btn"></button>
+      <ul data-menu="menu"  class="header-menu">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#Projects">Projects</a></li>
